--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -4,6 +4,24 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
+
+/* Custom CSS*/
+
+.circle {
+  display: block;
+  width: 200px;
+  height: 200px;
+  margin: 1em auto;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  -webkit-border-radius: 99em;
+  -moz-border-radius: 99em;
+  border-radius: 99em;
+  border: 5px solid #eee;
+  box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);  
+}
+
 /* Global Styles */
 
 html,
