--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -9,11 +9,16 @@
 
 
 .bg-custom{
-    background-color:#333745;
+    background-color:#90C3D8;
+}
+
+
+.bg-custom2{
+    background-color:#658998;
 }
 
 .text-primary{
-    color: #333745;
+    color: #90C3D8;
 }
 
 .circle {
@@ -30,6 +35,14 @@
   border: 5px solid #eee;
   box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);  
 }
+
+/* Color Scheme*/
+/*  Sky Blue: 90C3D8
+    52B5DE
+    3B5058
+    658998
+
+*/
 
 /* Global Styles */
 
@@ -250,7 +263,7 @@ hr.small {
 /* Map */
 
 .map {
-    height: 500px;
+    height: 300px;
 }
 
 @media(max-width:768px) {
