--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -1,4 +1,4 @@
-/*!
+s/*!
  * Start Bootstrap - Stylish Portfolio Bootstrap Theme (http://startbootstrap.com)
  * Code licensed under the Apache License v2.0.
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
@@ -275,5 +275,9 @@ hr.small {
 /* Footer */
 
 footer {
-    padding: 100px 0;
+    padding: 80px 0;
+}
+
+.instagram {
+    background-color: black;
 }
