--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -7,7 +7,6 @@ s/*!
 
 /* Custom CSS*/
 
-
 .bg-custom{
     background-color:#90C3D8;
 }
@@ -200,6 +199,7 @@ hr.small {
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+    padding-right: 60%;
 }
 
 /* About */
@@ -270,6 +270,10 @@ hr.small {
     .map {
         height: 75%;
     }
+  
+  .header {
+    padding-right: 0;
+  }
 }
 
 /* Footer */
