--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -66,6 +66,7 @@ body {
     padding: 0;
     font-size: 4.5em;
     font-weight: 700;
+    color: white;
 }
 
 /* Custom Button Styles */
@@ -73,7 +74,7 @@ body {
 .btn-dark {
     border-radius: 0;
     color: #fff;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0,0,0,0.8);
 }
 
 .btn-dark:hover,
@@ -199,7 +200,6 @@ hr.small {
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
-    padding-right: 60%;
 }
 
 /* About */
